crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__granite_with_system.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
<|start_of_role|>system<|end_of_role|>You are a science tutor.
<|start_of_role|>user<|end_of_role|>What is ATP?
<|start_of_role|>assistant<|end_of_role|>
