crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__instruct_multi_turn.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
Q: Can I use it for web servers?
A:
