crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__llama2_multi_turn.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
[INST] <<SYS>>
You are a Rust expert.
<</SYS>>

How does borrowing work? [/INST]
