crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__llama32_single_turn.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
<|begin_of_text|><|start_header_id|>system<|end_header_id|>

You are a helpful, harmless, and honest AI assistant.<|eot_id|><|start_header_id|>user<|end_header_id|>

Explain photosynthesis briefly.<|eot_id|><|start_header_id|>assistant<|end_header_id|>
