crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__mistral_multi_turn.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
<s>[INST] You are a Rust expert.

How does borrowing work? [/INST]
