crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__mixtral_single_turn.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
<s>[INST] Explain photosynthesis briefly. [/INST]
