crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__mixtral_with_system.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
<s>[INST] You are a science tutor.

What is ATP? [/INST]
