crates/bitnet-prompt-templates/tests/snapshots/snapshot_tests__mpt_multi_turn.snap
---
source: crates/bitnet-prompt-templates/tests/snapshot_tests.rs
expression: out
---
### System
You are a Rust expert.

### Instruction
How does borrowing work?

### Response
